fixed layout issues

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ justify-content: space-around;
 }
 
 .sidebar-content {
-  width: 40%;
+  width: 70%
 }
 
 
@@ -153,7 +153,7 @@ border-radius: 0.5rem;
     color: var(--text-color-main);
  } 
 .section-content-left {
-    width: 40%;
+    width: 70%;
     color: var(--text-color-main);
 }
 
